tests/algorithms/x/C/linear_algebra/src/power_iteration.c
// Generated by Mochi 0.10.32 on 2025-08-16 11:14 +0700
#include <stdio.h>
#include <string.h>
#include <stdlib.h>
#include <unistd.h>
#include <malloc.h>
#include <math.h>
#include <gmp.h>
typedef mpq_t* bigrat;
typedef mpz_t* bigint;

size_t mat_vec_mult_len;
size_t normalize_len;

size_t append_len;
static char* str_int(long long v) {
    char buf[32];
    snprintf(buf, sizeof(buf), "%lld", v);
    return strdup(buf);
}

static char* str_float(double v) {
    char buf[64];
    snprintf(buf, sizeof(buf), "%f", v);
    char *p = buf + strlen(buf) - 1;
    while (p > buf && *p == '0') *p-- = '\0';
    if (p > buf && *p == '.') *p = '\0';
    return strdup(buf);
}

static bigrat _bigrat(long n, long d) {
    bigrat r = malloc(sizeof(mpq_t));
    mpq_init(*r);
    mpq_set_si(*r, n, d);
    mpq_canonicalize(*r);
    return r;
}

static bigrat _add(bigrat a, bigrat b) {
    bigrat r = malloc(sizeof(mpq_t));
    mpq_init(*r);
    mpq_add(*r, *a, *b);
    return r;
}

static bigrat _sub(bigrat a, bigrat b) {
    bigrat r = malloc(sizeof(mpq_t));
    mpq_init(*r);
    mpq_sub(*r, *a, *b);
    return r;
}

static bigrat _mul(bigrat a, bigrat b) {
    bigrat r = malloc(sizeof(mpq_t));
    mpq_init(*r);
    mpq_mul(*r, *a, *b);
    return r;
}

static bigrat _div(bigrat a, bigrat b) {
    bigrat r = malloc(sizeof(mpq_t));
    mpq_init(*r);
    mpq_div(*r, *a, *b);
    return r;
}

static mpz_srcptr num(bigrat a) { return mpq_numref(*a); }
static mpz_srcptr denom(bigrat a) { return mpq_denref(*a); }

static char* str_list_double(const double *arr, size_t len) {
    size_t cap = len * 32 + 2;
    char *buf = malloc(cap);
    size_t pos = 0;
    buf[pos++] = '[';
    for (size_t i = 0; i < len; i++) {
        char tmp[64];
        snprintf(tmp, sizeof(tmp), "%g", arr[i]);
        size_t n = strlen(tmp);
        if (pos + n + 2 >= cap) { cap = cap * 2 + n + 2; buf = realloc(buf, cap); }
        memcpy(buf + pos, tmp, n);
        pos += n;
        if (i + 1 < len) buf[pos++] = ' ';
    }
    buf[pos++] = ']';
    buf[pos] = 0;
    return buf;
}

static double* list_append_double(double *arr, size_t *len, double val) {
    arr = realloc(arr, (*len + 1) * sizeof(double));
    arr[*len] = val;
    (*len)++;
    return arr;
}

#include <time.h>
static int seeded_now = 0;
static long long now_seed = 0;
static long long _now(void) {
    if (!seeded_now) {
        const char *s = getenv("MOCHI_NOW_SEED");
        if (s && *s) {
            now_seed = atoll(s);
            seeded_now = 1;
        }
    }
    if (seeded_now) {
        now_seed = (now_seed * 1664525 + 1013904223) % 2147483647;
        return now_seed;
    }
    struct timespec ts;
    clock_gettime(CLOCK_REALTIME, &ts);
    return (long long)(ts.tv_sec * 1000000000LL + ts.tv_nsec);
}

static long long _mem(void) {
    long long size = 0, rss = 0;
    FILE *f = fopen("/proc/self/statm", "r");
    if (f) {
        if (fscanf(f, "%lld %lld", &size, &rss) != 2) rss = 0;
        fclose(f);
    }
    return rss * (long long)sysconf(_SC_PAGESIZE);
}

static void panic(const char *msg) {
    fputs(msg, stderr);
    fputc('\n', stderr);
    exit(1);
}

typedef struct PowerResult PowerResult;

struct PowerResult {
    double eigenvalue;
    double *eigenvector;
    size_t eigenvector_len;
};

double input_matrix_0[3] = {41LL, 4LL, 20LL};
double input_matrix_1[3] = {4LL, 26LL, 30LL};
double input_matrix_2[3] = {20LL, 30LL, 50LL};
double *input_matrix_init[3] = {input_matrix_0, input_matrix_1, input_matrix_2};
double **input_matrix = input_matrix_init;
size_t input_matrix_len = 3;
size_t input_matrix_lens_init[3] = {3, 3, 3};
size_t *input_matrix_lens = input_matrix_lens_init;
size_t input_matrix_lens_len = 3;
double vector_init[3] = {41LL, 4LL, 20LL};
double *vector = vector_init;
size_t vector_len = 3;
PowerResult result;

double user_abs(double x);
double sqrtApprox(double x);
double dot(double * a, size_t a_len, double * b, size_t b_len);
double * mat_vec_mult(double * * mat, size_t mat_len, size_t* mat_lens, size_t mat_lens_len, double * vec, size_t vec_len);
double norm(double * vec, size_t vec_len);
double * normalize(double * vec, size_t vec_len);
PowerResult power_iteration(double * * matrix, size_t matrix_len, size_t* matrix_lens, size_t matrix_lens_len, double * vector, size_t vector_len, double error_tol, long long max_iterations);
int main(void);

double user_abs(double x) {
    if (x < 0LL) {
        return -(x);
    }
    return x;
}

double sqrtApprox(double x) {
    if (x == 0LL) {
        return 0LL;
    }
    double guess = x / 2LL;
    long long i = 0LL;
    while (i < 20LL) {
        guess = (guess + (x / guess)) / 2LL;
        i = i + 1LL;
    }
    return guess;
}

double dot(double * a, size_t a_len, double * b, size_t b_len) {
    double sum = 0LL;
    long long i = 0LL;
    while (i < a_len) {
        sum = sum + (a[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? a_len + _mochi_idx : _mochi_idx;})] * b[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? b_len + _mochi_idx : _mochi_idx;})]);
        i = i + 1LL;
    }
    return sum;
}

double * mat_vec_mult(double * * mat, size_t mat_len, size_t* mat_lens, size_t mat_lens_len, double * vec, size_t vec_len) {
    double *res = NULL;
    size_t res_len = 0;
    long long i = 0LL;
    while (i < mat_len) {
        res = list_append_double(res, &res_len, dot(mat[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? mat_len + _mochi_idx : _mochi_idx;})], mat_lens[i], vec, vec_len));
        i = i + 1LL;
    }
    return mat_vec_mult_len = res_len, res;
}

double norm(double * vec, size_t vec_len) {
    double sum = 0LL;
    long long i = 0LL;
    while (i < vec_len) {
        sum = sum + (vec[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? vec_len + _mochi_idx : _mochi_idx;})] * vec[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? vec_len + _mochi_idx : _mochi_idx;})]);
        i = i + 1LL;
    }
    double root = sqrtApprox(sum);
    return root;
}

double * normalize(double * vec, size_t vec_len) {
    double n = norm(vec, vec_len);
    double *res = NULL;
    size_t res_len = 0;
    long long i = 0LL;
    while (i < vec_len) {
        res = list_append_double(res, &res_len, vec[(int)({long long _mochi_idx = i; _mochi_idx < 0 ? vec_len + _mochi_idx : _mochi_idx;})] / n);
        i = i + 1LL;
    }
    return normalize_len = res_len, res;
}

PowerResult power_iteration(double * * matrix, size_t matrix_len, size_t* matrix_lens, size_t matrix_lens_len, double * vector, size_t vector_len, double error_tol, long long max_iterations) {
    double *v = normalize(vector, vector_len);
    size_t v_len = normalize_len;
    double lambda_prev = 0LL;
    double lambda = 0LL;
    double err = 1000000000000LL;
    long long iterations = 0LL;
    while ((err > error_tol) && (iterations < max_iterations)) {
        double *w = mat_vec_mult(matrix, matrix_len, matrix_lens, matrix_len, v, v_len);
        size_t w_len = mat_vec_mult_len;
        v = normalize(w, w_len);
        v_len = normalize_len;
        double *mv = mat_vec_mult(matrix, matrix_len, matrix_lens, matrix_len, v, v_len);
        size_t mv_len = mat_vec_mult_len;
        lambda = dot(v, v_len, mv, mv_len);
        bigint(*)(const char*) denom;
        if (lambda != 0LL) {
            denom = user_abs(lambda);
        } else {
            denom = 1LL;
        }
        err = user_abs(lambda - lambda_prev) / denom;
        lambda_prev = lambda;
        iterations = iterations + 1LL;
    }
    return (PowerResult){.eigenvalue = lambda, .eigenvector = v, .eigenvector_len = v_len};
}

int main(void) {
    {
        long long __start = _now();
        result = power_iteration(input_matrix, input_matrix_len, input_matrix_lens, input_matrix_len, vector, vector_len, 1e-12, 100LL);
        puts(str_float(result.eigenvalue));
        puts(str_list_double(result.eigenvector, result.eigenvector_len));
        long long __end = _now();
        long long __dur_us = (__end - __start) / 1000;
        long long __mem_bytes = _mem();
        printf("{\n  \"duration_us\": %-lld,\n  \"memory_bytes\": %-lld,\n  \"name\": \"main\"\n}\n", __dur_us, __mem_bytes);
    }
    return 0;
}
